--- a/package.json
+++ b/package.json
@@ -101,13 +101,17 @@
     }
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.1.0",
     "@electron/notarize": "^2.3.2",
+    "@emotion/react": "^11.13.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^6.1.4",
+    "next-themes": "^0.4.3",
     "pg": "^8.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.16.0",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
