--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,13 @@
-// {
-//   "compilerOptions": {
-//     "incremental": true,
-//     "target": "es2022",
-//     "module": "commonjs",
-//     "lib": ["dom", "es2022"],
-//     "jsx": "react-jsx",
-//     "strict": true,
-//     "sourceMap": true,
-//     "moduleResolution": "node",
-//     "esModuleInterop": true,
-//     "allowSyntheticDefaultImports": true,
-//     "resolveJsonModule": true,
-//     "allowJs": true,
-//     "outDir": ".erb/dll",
-//     "experimentalDecorators": true,
-//     "strictPropertyInitialization": false,
-//     "skipLibCheck": true,
-//     "paths": {
-//       "@/*": ["./src/*"]
-//     }
-//   },
-//   "exclude": ["test", "release/build", "release/app/dist", ".erb/dll"]
-// }
-
-// experemental tsconfig
 {
   "compilerOptions": {
     "incremental": true,
     "target": "es2022",
-    "module": "ESNext",
+    "module": "commonjs",
     "lib": ["dom", "es2022"],
     "jsx": "react-jsx",
     "strict": true,
     "sourceMap": true,
-    "moduleResolution": "Bundler",
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
@@ -48,3 +22,29 @@
   },
   "exclude": ["test", "release/build", "release/app/dist", ".erb/dll"]
 }
+
+// experemental tsconfig
+// {
+//   "compilerOptions": {
+//     "incremental": true,
+//     "target": "es2022",
+//     "module": "ESNext",
+//     "lib": ["dom", "es2022"],
+//     "jsx": "react-jsx",
+//     "strict": true,
+//     "sourceMap": true,
+//     "moduleResolution": "Bandler",
+//     "esModuleInterop": true,
+//     "allowSyntheticDefaultImports": true,
+//     "resolveJsonModule": true,
+//     "allowJs": true,
+//     "outDir": ".erb/dll",
+//     "experimentalDecorators": true,
+//     "strictPropertyInitialization": false,
+//     "skipLibCheck": true,
+//     "paths": {
+//       "@/*": ["./src/*"]
+//     }
+//   },
+//   "exclude": ["test", "release/build", "release/app/dist", ".erb/dll"]
+// }
