--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "pg": "^8.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.16.0",
     "reflect-metadata": "^0.2.2",
