--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "@chakra-ui/react": "^3.1.0",
     "@electron/notarize": "^2.3.2",
     "@emotion/react": "^11.13.3",
+    "axios": "^1.8.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^6.1.4",
