--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,14 @@
       "@/*": ["./src/*"]
     }
   },
-  "exclude": ["test", "release/build", "release/app/dist", ".erb/dll"]
+  "exclude": [
+    "test",
+    "release/build",
+    "release/app/dist",
+    ".erb/dll",
+    "node_modules"
+  ]
 }
-
 // experemental tsconfig
 // {
 //   "compilerOptions": {
